--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Benno Stein</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./bootstrap.min.css" rel="stylesheet">
-    <link href="./custom.css" rel="stylesheet">
+    <link href="assets/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/custom.css" rel="stylesheet">
   </head>
   <body>
     <div id="bg"></div>
