Add ase18 preprint, add google internship

--- a/index.html
+++ b/index.html
@@ -37,12 +37,17 @@
 	  </p>
 	  <h2 class="page-header text-left">Research Interests</h2>
 	  <p style="text-indent:5%">
-	    I am interested in building static analysis tools and formalisms that are able to handle the complexities of modern, feature-rich dynamic languages.  My current research aims to improve precision and efficiency of JavaScript analysis by combining a standard forwards abstract interpretation with a goal-directed backwards symbolic execution, refuting spurious data-flow on-demand at critical points during the forwards analysis.
+	    I am interested in building static analysis tools and formalisms that are able to handle the complexities of modern, feature-rich dynamic languages.  My current research aims to improve precision and efficiency of JavaScript analysis by combining a standard forwards abstract interpretation with a goal-directed backwards symbolic execution, refuting spurious data-flow on-demand at critical points during the forwards analysis.  I've also worked on a range of other program analysis topics in research and industry including refinement type systems, incremental program analysis, and software engineering applications of program analysis.
 	  </p>
 	  
 	  <h2 class="page-header text-left">Recent News</h2>
 
 	  <div class="row-fluid">
+
+	    <h4 id="news-header"><span style="font-weight:bold;">Program Analysis Internship @ Google</span> Sunnyvale, CA, Summer 2018</h4>
+	    <p id="news-item">
+	      Implemented some improvements (type inference, access-path tracking, type annotation/bound support) for the Error Prone nullness analysis.  (<a href="https://github.com/google/error-prone">open source</a>)
+	    </p>
 
 	    <h4 id="news-header"><span style="font-weight:bold;">Program Analysis Internship @ Uber</span> Palo Alto, CA, Summer 2017</h4>
 	    <p id="news-item">
