Add ASE 18 info to CV and website

--- a/index.html
+++ b/index.html
@@ -22,13 +22,11 @@
 	    <a href="http://www.colorado.edu/cs/about/directions">ECCS 121</a>
 	  </p>
 	  <h4>PhD Student, University of Colorado at Boulder</h4>
-	  <!--	  <h4><a href="http://plv.colorado.edu">Programming Languages and Verification Group</a></h4>-->
-	  <h4><a href="CV.pdf">Curriculum Vitae</a> | <a href="https://github.com/bennostein">Github</a> | <a href="https://www.linkedin.com/in/bennostein/">Linkedin</a> </h4>
+	  <h4> <a href="#pubs">Publications</a> | <a href="CV.pdf">Curriculum Vitae</a> | <a href="https://github.com/bennostein">Github</a> | <a href="https://www.linkedin.com/in/bennostein/">Linkedin</a> </h4>
 
 	  
 	</div>
       </div>
-<!--      <div class="row-fluid" id ="divider"><div class="col-xs-12 page-header"></div></div>-->
       <div class="row-fluid" id="body">
 	<div class="col-md-12">
 	  <h2 class="page-header text-left">About Me</h2>
@@ -44,6 +42,12 @@
 
 	  <div class="row-fluid">
 
+	    <h4 id="news-header"><span style="font-weight:bold;">Paper Presentation @ ASE '18</span> Montpellier, France, September 2018</h4>
+	    <p id="news-item">
+	      Presented my paper <a href="ase18.pdf">Safe Stream-Based Programming with Refinement Types</a> at the 33rd IEEE/ACM International Conference on Automated Software Engineering. (<a href="ase18_slides.pdf">slides</a>)
+	    </p>
+
+	    
 	    <h4 id="news-header"><span style="font-weight:bold;">Program Analysis Internship @ Google</span> Sunnyvale, CA, Summer 2018</h4>
 	    <p id="news-item">
 	      Implemented some improvements (type inference, access-path tracking, type annotation/bound support) for the Error Prone nullness analysis.  (<a href="https://github.com/google/error-prone">open source</a>)
@@ -75,6 +79,17 @@
 	    </p>
 
 	  </div>
+	  
+	  <h2 id="pubs" class="page-header text-left">Publications</h2>
+	    <h4 id="news-header"><span>Safe Stream-Based Programming with Refinement Types</h4>
+	    <p id="news-item">
+	      <b>Benno Stein</b>, Lazaro Clapp, Manu Sridharan, Bor-Yuh Evan Chang.
+	      <br>
+	      <i>33rd IEEE/ACM International Conference on Automated Software Engineering <b>(ASE '18)</b>.</i>
+	      <br>
+	       (69/346 = 20%) | <a href="ase18.pdf">pdf</a> | <a href="ase18_slides.pdf">slides</a>
+	    </p>
+
 	  <br><br><br>
 	</div>
       </div>
