fix dotfile links

--- a/dotfiles.html
+++ b/dotfiles.html
@@ -1,3 +1,3 @@
-<a href="dotfiles/.gitconfig">.gitconfig</a><br>
-<a href="dotfiles/.zshrc">.zshrc</a><br>
+<a href="dotfiles/gitconfig">.gitconfig</a><br>
+<a href="dotfiles/zshrc">.zshrc</a><br>
 <a href="dotfiles/.blank_tex_template.tex">latex template</a>
