fix campus map link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<p>
 	  <a href="mailto:Benno Stein">firstname dot lastname at colorado dot edu</a>
 	  <br>
-	  <a href="http://www.colorado.edu/cs/about/directions">ECCS 121</a>
+	  <a href="https://map.concept3d.com/?id=336#!w/40.00714,-105.2637,1;40.00668,-105.26376,1;1">ECCS 121</a>
 	</p>
 	<hr>
 	<div class="pv1 row">
