fix broken pdf link

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 	  (Slides courtesy of Benjamin Barslev Nielsen)
 	</div>
       	<div class="m1 col"><a class="btn" href="oopsla19.pdf">pdf</a></div>
-	<div class="m1 col"><a class="btn" href="oopsla19-slides">slides</a></div>
+	<div class="m1 col"><a class="btn" href="oopsla19-slides.pdf">slides</a></div>
 	<div class="m1 col"><a class="btn" href="oopsla19-poster.pdf">poster</a></div>
       </div>
 
