add PLDI '21 paper, thesis proposal; s/phd student/phd candidate/

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<img class="" src="assets/headshot.png">
 		
 	<hr>
-	<h4>PhD Student</h4><h5> University of Colorado Boulder</h5>
+	<h4>PhD Candidate</h4><h5> University of Colorado Boulder</h5>
 	<p>
 	  <a href="mailto:Benno Stein">firstname dot lastname at colorado dot edu</a>
 	  <br>
@@ -39,7 +39,7 @@
 	
 	<div class="row" id="about">
 	  <h3>About Me</h3><hr>
-	  I am a PhD student in the Department of Computer Science at the University of Colorado Boulder, where I started in Fall 2015 and received an MS in Fall 2017.  I am a member of the Programming Languages and Verification (<a href="https://plv.colorado.edu">CUPLV</a>), advised by Professor <a  href="http://cs.colorado.edu/~bec">Evan Chang</a>.  Previously, I was a student at <a href="http://www.williams.edu">Williams College</a>, in Williamstown, MA, where I graduated in June 2015 with a BA in Computer Science and Mathematics.
+	  <p>I am a PhD candidate in the Department of Computer Science at the University of Colorado Boulder, where I started in Fall 2015 and received an MS in Fall 2017.  I am a member of the Programming Languages and Verification (<a href="https://plv.colorado.edu">CUPLV</a>), advised by Professor <a  href="http://cs.colorado.edu/~bec">Evan Chang</a>.  Previously, I was a student at <a href="http://www.williams.edu">Williams College</a>, in Williamstown, MA, where I graduated in June 2015 with a BA in Computer Science and Mathematics.</p>
 	</div>
 	
 	<div class="row" id="research">
@@ -55,6 +55,40 @@
     </div>
     <div  class="row" id="news">
       <h2>Recent News</h2><hr>
+
+      <div class="row">
+	<div class="col">
+	  <h4><b> Paper @ PLDI '21 </b> </h4>
+	</div>
+	<div class="col">
+	  <h5><i>Online-only, June 2021</i></h5>
+	</div>
+	<div class="col" style="text-align:right">
+	  <a href="dai.pdf" class="p1 btn b-white">paper (draft)</a>
+	</div>
+      </div>
+      <div class="row">
+	My paper <i>Demanded Abstract Interpretation</i> will be presented at the ACM/SIGPLAN Conference on Programming Language Design and Implementation (PLDI 2021)!
+      </div>
+
+      <hr style="border:dashed #eee 2px">
+      <div class="row">
+	<div class="col">
+	  <h4><b> Thesis Proposal </b> </h4>
+	</div>
+	<div class="col">
+	  <h5><i>Boulder, Colorado, February 2021</i></h5>
+	</div>
+	<div class="col" style="text-align:right">
+	  <a href="prop.pdf" class="p1 btn b-white">proposal</a>
+	  <a href="prop.key" class="p1 btn b-white">slides</a>
+	</div>
+      </div>
+      <div class="row">
+	I proposed a dissertation centered around my recent work on <i>Interactive Abstract Interpretation</i>, in which I lift <i>arbitrary</i> abstract interpreters to incremental and demand-driven equivalents that are provably sound, terminating, and from-scratch consistent with the underlying interpreter.
+      </div>
+
+      <hr style="border:dashed #eee 2px">
       
       <div class="row">
 	<div class="col">
@@ -223,9 +257,28 @@
 
       <div class="row" style="margin-bottom:0px">
 	<div class="col">
+	  <h4>Demanded Abstract Interpretation</h4>
+	</div>
+	<div class="col" style="text-align:right">
+	  <h5><i>PLDI '21 (to appear)</i></h5>
+	</div>
+      </div>
+      <div class="row" style="margin-top:0px">
+	<div class="8 col">
+	  <b>Benno Stein</b>, Bor-Yuh Evan Chang, Manu Sridharan.
+	  <br>
+	  <i>ACM/SIGPLAN Conference on Programming Language Design and Implementation (<b>PLDI '21</b>)</i>
+	</div>
+	<div class="m1 col"><a class="btn" href="dai.pdf">preprint</a></div>
+      </div>
+
+      <br><hr style="border:dashed #eee 2px">
+
+      <div class="row" style="margin-bottom:0px">
+	<div class="col">
 	  <h4>Static Analysis with Demand-Driven Value Refinement</h4>
 	</div>
-	<div class="2 col" style="text-align:right">
+	<div class="col" style="text-align:right">
 	  <h5><i>OOPSLA '19</i></h5>
 	</div>
       </div>
@@ -247,7 +300,7 @@
 	<div class="col">
 	  <h4>Safe Stream-Based Programming with Refinement Types</h4>
 	</div>
-	<div class="2 col" style="text-align:right">
+	<div class="col" style="text-align:right">
 	  <h5><i>ASE '18</i></h5>
 	</div>
       </div>
