clean up some formatting

--- a/index.html
+++ b/index.html
@@ -60,15 +60,18 @@
 	<div class="col">
 	  <h4><b> Paper @ PLDI '21 </b> </h4>
 	</div>
-	<div class="col">
-	  <h5><i>Online-only, June 2021</i></h5>
-	</div>
 	<div class="col" style="text-align:right">
-	  <a href="dai.pdf" class="p1 btn b-white">paper (draft)</a>
+	  <h5><i>Online-only, June 2021</i></h5>
 	</div>
       </div>
       <div class="row">
-	My paper <i>Demanded Abstract Interpretation</i> will be presented at the ACM/SIGPLAN Conference on Programming Language Design and Implementation (PLDI 2021)!
+	<div class="col">
+	  My paper <i>Demanded Abstract Interpretation</i> will be presented at the ACM/SIGPLAN Conference on Programming Language Design and Implementation (PLDI 2021)
+	</div>
+	<div class="col" style="text-align:right">
+	  <a href="dai.pdf" class="p1 btn b-white">preprint</a>
+	</div>
+
       </div>
 
       <hr style="border:dashed #eee 2px">
@@ -76,16 +79,19 @@
 	<div class="col">
 	  <h4><b> Thesis Proposal </b> </h4>
 	</div>
-	<div class="col">
+	<div class="col" style="text-align:right">
 	  <h5><i>Boulder, Colorado, February 2021</i></h5>
+	</div>
+      </div>
+      <div class="row">
+	<div class="col">
+	  I proposed a dissertation centered around my recent work on <i>Interactive Abstract Interpretation</i>, in which I lift <i>arbitrary</i> abstract interpreters to incremental and demand-driven equivalents that are provably sound, terminating, and from-scratch consistent with the underlying interpreter.
 	</div>
 	<div class="col" style="text-align:right">
 	  <a href="prop.pdf" class="p1 btn b-white">proposal</a>
 	  <a href="prop.key" class="p1 btn b-white">slides</a>
 	</div>
-      </div>
-      <div class="row">
-	I proposed a dissertation centered around my recent work on <i>Interactive Abstract Interpretation</i>, in which I lift <i>arbitrary</i> abstract interpreters to incremental and demand-driven equivalents that are provably sound, terminating, and from-scratch consistent with the underlying interpreter.
+
       </div>
 
       <hr style="border:dashed #eee 2px">
@@ -94,17 +100,19 @@
 	<div class="col">
 	  <h4><b> Paper @ OOPSLA '19 </b> </h4>
 	</div>
-	<div class="col">
+	<div class="col" style="text-align:right">
 	  <h5><i>Athens, Greece, October 2019</i></h5>
+	</div>
+      </div>
+      <div class="row">
+	<div class="col">
+	  We presented our paper <i>Static Analysis with Demand-Driven Value Refinement</i> at the ACM/SIGPLAN Conference on Object-Oriented Programming, Systems, Languages, and Applications.
 	</div>
 	<div class="col" style="text-align:right">
 	  <a href="oopsla19.pdf" class="p1 btn b-white">paper</a>
 	  <a href="oopsla19-poster.pdf" class="p1 btn b-white">poster</a>
 	  <a href="oopsla19-slides.pdf" class="p1 btn b-white">slides</a>
 	</div>
-      </div>
-      <div class="row">
-	We presented our paper <i>Static Analysis with Demand-Driven Value Refinement</i> at the ACM/SIGPLAN Conference on Object-Oriented Programming, Systems, Languages, and Applications.
       </div>
 
       <hr style="border:dashed #eee 2px">
@@ -113,15 +121,17 @@
 	<div class="col">
 	  <h4><b> Facebook Internship </b> </h4>
 	</div>
-	<div class="col">
-	  <h5><i>London, UK, Fall 2019</i></h5>
-	</div>
 	<div class="col" style="text-align:right">
-	  <a href="https://github.com/facebook/infer/tree/master/sledge" class="p1 btn b-white">open-source</a>
+	  <h5><i>London, UK, Fall 2019</i></h5>
 	</div>
       </div>
       <div class="row">
-	I worked with Josh Berdine and the Infer team on <i>Sledge</i>: a separation logic-based symbolic executor for LLVM.
+	<div class="col">
+	  I worked with Josh Berdine and the Infer team on <i>Sledge</i>: a separation logic-based symbolic executor for LLVM.
+	</div>
+	<div class="col" style="text-align:right">
+	  <a href="https://github.com/facebook/infer/tree/master/sledge" class="p1 btn b-white" style="white-space:nowrap">open-source</a>
+	</div>
       </div>
 
       <hr style="border:dashed #eee 2px">
@@ -130,17 +140,18 @@
 	<div class="col">
 	  <h4><b> Paper @ ASE '18 </b> </h4>
 	</div>
-	<div class="col">
-	  <h5><i>Montpellier, France, September 2018</i></h5>
-	</div>
 	<div class="col" style="text-align:right">
-	  <a href="ase18.pdf" class="p1 btn b-white">paper</a>
-	  <a href="ase18_slides.pdf" class="p1 btn b-white">slides</a>
-	  
+	  <h5><i>Montpellier, France, September 2018</i></h5>
 	</div>
       </div>
       <div class="row">
-	I presented our paper <i>Safe Stream-Based Programming with Refinement Types</i> at the 33rd IEEE/ACM International Conference on Automated Software Engineering.
+	<div class="col">
+	  I presented our paper <i>Safe Stream-Based Programming with Refinement Types</i> at the 33rd IEEE/ACM International Conference on Automated Software Engineering.
+	</div>
+	<div class="col" style="text-align:right">
+	  <a href="ase18.pdf" class="p1 btn b-white">paper</a>
+	  <a href="ase18_slides.pdf" class="p1 btn b-white">slides</a>	  
+	</div>
       </div>
 
       <hr style="border:dashed #eee 2px">
@@ -149,15 +160,17 @@
 	<div class="col">
 	  <h4><b> Google Internship </b> </h4>
 	</div>
-	<div class="col">
-	  <h5><i>Sunnyvale, CA, Summer 2018</i></h5>
-	</div>
 	<div class="col" style="text-align:right">
-	  <a href="https://github.com/google/error-prone" class="p1 btn b-white">open-source</a>
+	  <h5><i>Sunnyvale, CA, Summer 2018</i></h5>
 	</div>
       </div>
       <div class="row">
-	I worked with Kevin Bierhoff and the Java language platform team to implement some improvements (type inference, access-path tracking, type annotation and bound support) for the <a href="https://github.com/google/error-prone">Error Prone</a> Java nullness analysis.
+	<div class="col">
+	  I worked with Kevin Bierhoff and the Java language platform team to implement some improvements (type inference, access-path tracking, type annotation and bound support) for the <a href="https://github.com/google/error-prone">Error Prone</a> Java nullness analysis.
+	</div>
+	<div class="col" style="text-align:right">
+	  <a href="https://github.com/google/error-prone" class="p1 btn b-white" style="white-space:nowrap">open-source</a>
+	</div>
       </div>
       
       <hr style="border:dashed #eee 2px">
@@ -180,15 +193,17 @@
 	<div class="col">
 	  <h4><b> Uber Internship </b> </h4>
 	</div>
-	<div class="col">
-	  <h5><i>Palo Alto, CA, Summer 2017</i></h5>
-	</div>
 	<div class="col" style="text-align:right">
-	  <a href="https://github.com/google/uber-research/RxThreadEffectChecker" class="p1 btn b-white">open-source</a>
+	  <h5><i>Palo Alto, CA, Summer 2017</i></h5>
 	</div>
       </div>
       <div class="row">
-	I built a type analysis to statically detect multithreading bugs in <a href="http://reactivex.io/">functional-reactive</a> Android applications, working under Manu Sridharan in the static analysis group.
+	<div class="col">
+	  I built a type analysis to statically detect multithreading bugs in <a href="http://reactivex.io/">functional-reactive</a> Android applications, working under Manu Sridharan in the static analysis group.
+	  </div>
+	<div class="col" style="text-align:right">
+	  <a href="https://github.com/google/uber-research/RxThreadEffectChecker" class="p1 btn b-white" style="white-space:nowrap">open-source</a>
+	</div>
       </div>
 
       <hr style="border:dashed #eee 2px">
@@ -211,16 +226,18 @@
 	<div class="7 col">
 	  <h4><b> PLDI Student Research Competition </b> </h4>
 	</div>
-	<div class="3 col">
+	<div class="3 col" style="text-align:right">
 	  <h5><i>Santa Barbara, CA, June 2016</i></h5>
+	</div>
+      </div>
+      <div class="row">
+	<div class="col">
+	  Attended PLDI and won 2nd place in the SRC for my presentation on <i>Goal-Directed Backwards Static Analysis for JavaScript</i>.
 	</div>
 	<div class="2 col" style="text-align:right">
 	  <a href="pldi_src_poster.pdf" class="p1 btn b-white">poster</a>
 	  <a href="pldi_src_abstract.pdf" class="p1 btn b-white">abstract</a>	  
 	</div>
-      </div>
-      <div class="row">
-	Attended PLDI and won 2nd place in the SRC for my presentation on <i>Goal-Directed Backwards Static Analysis for JavaScript</i>.
       </div>
 
       <hr style="border:dashed #eee 2px">
@@ -269,7 +286,7 @@
 	  <br>
 	  <i>ACM/SIGPLAN Conference on Programming Language Design and Implementation (<b>PLDI '21</b>)</i>
 	</div>
-	<div class="m1 col"><a class="btn" href="dai.pdf">preprint</a></div>
+	<div class="m1 col"><a class="btn b-white" href="dai.pdf">preprint</a></div>
       </div>
 
       <br><hr style="border:dashed #eee 2px">
@@ -289,9 +306,9 @@
 	  <i>ACM/SIGPLAN Conference on Object-Oriented Programs, Systems, Languages, and Applications (<b>OOPSLA '19</b>)</i><br>
 	  (Slides courtesy of Benjamin Barslev Nielsen)
 	</div>
-      	<div class="m1 col"><a class="btn" href="oopsla19.pdf">pdf</a></div>
-	<div class="m1 col"><a class="btn" href="oopsla19-slides.pdf">slides</a></div>
-	<div class="m1 col"><a class="btn" href="oopsla19-poster.pdf">poster</a></div>
+      	<div class="m1 col"><a class="btn b-white" href="oopsla19.pdf">pdf</a></div>
+	<div class="m1 col"><a class="btn b-white" href="oopsla19-slides.pdf">slides</a></div>
+	<div class="m1 col"><a class="btn b-white" href="oopsla19-poster.pdf">poster</a></div>
       </div>
 
       <br><hr style="border:dashed #eee 2px">
@@ -310,8 +327,8 @@
 	  <br>
 	  <i>33rd IEEE/ACM International Conference on Automated Software Engineering (<b>ASE '18</b>)</i>
 	</div>
-      	<div class="m1 col"><a class="btn" href="ase18.pdf">pdf</a></div>
-	<div class="m1 col"><a class="btn" href="ase18_slides.pdf">slides</a></div>
+      	<div class="m1 col"><a class="btn b-white" href="ase18.pdf">pdf</a></div>
+	<div class="m1 col"><a class="btn b-white" href="ase18_slides.pdf">slides</a></div>
       </div>
       
     </div>
