--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
       <div class="row">
 	<div class="col">
-	  My paper <i>Demanded Abstract Interpretation</i> will be presented at the ACM/SIGPLAN Conference on Programming Language Design and Implementation (PLDI 2021)
+	  My paper <i>Demanded Abstract Interpretation</i> was (conditionally) accepted and will be presented at the ACM/SIGPLAN Conference on Programming Language Design and Implementation (PLDI 2021)
 	</div>
 	<div class="col" style="text-align:right">
 	  <a href="dai.pdf" class="p1 btn b-white">preprint</a>
