update pldi preprint link to point at arxiv

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
       </div>
       <div class="row">
 	<div class="col">
-	  My paper <i>Demanded Abstract Interpretation</i> was (conditionally) accepted and will be presented at the ACM/SIGPLAN Conference on Programming Language Design and Implementation (PLDI 2021)
+	  Our paper <i>Demanded Abstract Interpretation</i> will be presented at the ACM/SIGPLAN Conference on Programming Language Design and Implementation (PLDI 2021)
 	</div>
 	<div class="col" style="text-align:right">
-	  <a href="dai.pdf" class="p1 btn b-white">preprint</a>
+	  <a href="https://arxiv.org/abs/2104.01270" class="p1 btn b-white">preprint</a>
 	</div>
 
       </div>
