add alt headshot

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	
 	<h1>Benno Stein</h1>
 
-	<img class="" src="assets/headshot.png">
+	<img class="" src="assets/alt_headshot.png" style="max-width: 100%;  height: auto">
 		
 	<hr>
 	<h4>PhD Candidate</h4><h5> University of Colorado Boulder</h5>
@@ -48,7 +48,7 @@
 	  Currently, I am working on incremental and demand-driven <b>abstract interpretation</b>, using graph-based techniques to efficiently and soundly deliver analysis results when and where they're needed.
 	  Prior to that, I worked on improving the precision and efficiency of JavaScript analysis, combining a standard forwards abstract interpreter with a goal-directed <b>backwards symbolic execution</b> to refute spurious dataflow on-demand at critical points during the forwards analysis.
 
-	  I've also worked on a range of other program analysis topics in both academia and industry including refinement type systems, bounded symbolic execution, and software engineering applications of program analysis.
+	  I've also worked on a range of other program analysis topics in both academia and industry including refinement type systems, type inference, and bounded symbolic execution.
 	</div>
       </div>
       
@@ -61,7 +61,7 @@
 	  <h4><b> Paper @ PLDI '21 </b> </h4>
 	</div>
 	<div class="col" style="text-align:right">
-	  <h5><i>Online-only, June 2021</i></h5>
+	  <h5><i>Virtual, June 2021</i></h5>
 	</div>
       </div>
       <div class="row">
