Add official version of PLDI'21 paper and a PDF of corresponding slides

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 	  Our paper <i>Demanded Abstract Interpretation</i> will be presented at the ACM/SIGPLAN Conference on Programming Language Design and Implementation (PLDI 2021)
 	</div>
 	<div class="col" style="text-align:right">
-	  <a href="https://arxiv.org/abs/2104.01270" class="p1 btn b-white">preprint</a>
+	  <a class="p1 btn b-white" href="pldi21.pdf">paper</a>
+	  <a class="p1 btn b-white" href="pldi21-slides.pdf">slides</a>
 	</div>
 
       </div>
@@ -277,7 +278,7 @@
 	  <h4>Demanded Abstract Interpretation</h4>
 	</div>
 	<div class="col" style="text-align:right">
-	  <h5><i>PLDI '21 (to appear)</i></h5>
+	  <h5><i>PLDI '21</i></h5>
 	</div>
       </div>
       <div class="row" style="margin-top:0px">
@@ -286,7 +287,8 @@
 	  <br>
 	  <i>ACM/SIGPLAN Conference on Programming Language Design and Implementation (<b>PLDI '21</b>)</i>
 	</div>
-	<div class="m1 col"><a class="btn b-white" href="dai.pdf">preprint</a></div>
+	<div class="m1 col"><a class="btn b-white" href="pldi21.pdf">pdf</a></div>
+	<div class="m1 col"><a class="btn b-white" href="pldi21-slides.pdf">slides</a></div>
       </div>
 
       <br><hr style="border:dashed #eee 2px">
