--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	
 	<div class="row" id="about">
 	  <h3>About Me</h3><hr>
-	  <p>I am a PhD candidate in the Department of Computer Science at the University of Colorado Boulder, where I started in Fall 2015 and received an MS in Fall 2017.  I am a member of the Programming Languages and Verification (<a href="https://plv.colorado.edu">CUPLV</a>), advised by Professor <a  href="http://cs.colorado.edu/~bec">Evan Chang</a>.  Previously, I was a student at <a href="http://www.williams.edu">Williams College</a>, in Williamstown, MA, where I graduated in June 2015 with a BA in Computer Science and Mathematics.</p>
+	  <p>I am a PhD candidate in the Department of Computer Science at the University of Colorado Boulder, where I started in Fall 2015 and received an MS in Fall 2017.  I am a member of the Programming Languages and Verification group (<a href="https://plv.colorado.edu">CUPLV</a>), advised by Professor <a  href="http://cs.colorado.edu/~bec">Evan Chang</a>.  Previously, I was a student at <a href="http://www.williams.edu">Williams College</a>, in Williamstown, MA, where I graduated in June 2015 with a BA in Computer Science and Mathematics.</p>
 	</div>
 	
 	<div class="row" id="research">
