add link to dotfiles repo; update news

--- a/dotfiles.html
+++ b/dotfiles.html
@@ -1,3 +1,1 @@
-<a href="dotfiles/gitconfig">.gitconfig</a><br>
-<a href="dotfiles/zshrc">.zshrc</a><br>
-<a href="dotfiles/.blank_tex_template.tex">latex template</a>
+<meta http-equiv="Refresh" content="0; url='https://github.com/bennostein/dotfiles'" />
