--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ function toggle(elt_id, force_visible) {
         </div>
 
         <div class="m1 col">
-          <a class="p1 btn b-green" href="https://dblp.org/pid/69/4806-2.html">Publications</a>
+          <a class="p1 btn b-green" href="https://dblp.org/pid/69/4806-2.html">dblp</a>
         </div>
 
         <div class="m1 col">
@@ -50,6 +50,11 @@ function toggle(elt_id, force_visible) {
         <div class="m1 col">
           <a class="p1 btn b-green" href="https://www.linkedin.com/in/bennostein">LinkedIn</a>
         </div>
+
+	<div class="m1 col">
+          <a class="p1 btn b-green" href="dotfiles.html">dotfiles</a>
+        </div>
+
       </div>
     </div>
 
@@ -76,6 +81,24 @@ function toggle(elt_id, force_visible) {
 
   <div class="row" id="news" style="display:none">
     <div class="row m0"></div>
+
+    <div class="row mt0 mb0 ph1">
+      <div class="row" style="margin-bottom: -2em">
+        <div class="col">
+          <h4><b style="color:#49c484">Ralph J. Slutz Student Excellence Award</b></h4>
+        </div>
+
+        <div class="col" style="text-align:right">
+          <h5><i>Boulder, Colorado, September 2021</i></h5>
+        </div>
+      </div>
+
+      <div class="row ml1 ph2">
+        <div class="col newsitem">
+	  I was honored to receive the <a href="https://www.colorado.edu/cs/news-events/student-awards#ralph_j_slutz_student_excellence-939">award</a>, which is given by the CU Boulder CS Department to "recognize students in computer science who have established a record of academic excellence and/or technical research and innovation."
+        </div>
+      </div>
+    </div>
 
     <div class="row mt0 mb0 ph1">
       <div class="row" style="margin-bottom: -2em">
