add link to extended version of pldi21

--- a/index.html
+++ b/index.html
@@ -377,6 +377,9 @@ function toggle(elt_id, force_visible) {
           <a class="p1 btn b-green" href="pldi21.pdf">pdf</a>
         </div>
 
+	<div class="m1 col">
+	  <a class="p1 btn b-green" href="https://arxiv.org/abs/2104.01270">extended</a>
+	</div>
         <div class="m1 col">
           <a class="p1 btn b-green" href="pldi21-slides.pdf">slides</a>
         </div>
