add dissertation slides, update some text/metadata

--- a/index.html
+++ b/index.html
@@ -26,13 +26,10 @@ function toggle(elt_id, force_visible) {
     <div class="4 col" style="text-align: center">
       <h1>Benno Stein</h1><img class="b-green" src="assets/alt_headshot.png" style="max-width: 100%; height: auto">
       <hr>
+      <h4>Computer Scientist, PhD</h4>
+      <h4>Software Engineer at Meta</h4>
 
-      <h4>PhD Candidate</h4>
-
-      <h5>University of Colorado Boulder</h5>
-
-      <p><a href="mailto:Benno%20Stein">first dot last at colorado dot edu</a><br>
-      <a href="https://map.concept3d.com/?id=336#!w/40.00714,-105.2637,1;40.00668,-105.26376,1;1">ECCS 121</a></p>
+      <p><a href="mailto:Benno%20Stein">first dot last at gmail</a><br></p>
       <hr>
 
       <div class="pv1 row">
@@ -55,18 +52,20 @@ function toggle(elt_id, force_visible) {
       </div>
     </div>
 
-    <div class="7 col">
       <div class="row" id="about">
         <h3 class="mb0">About Me</h3>
         <hr class="mt0">
-
-        <p>I am a PhD candidate in the Department of Computer Science at the University of Colorado Boulder, where I started in Fall 2015 and received an MS in Fall 2017. I am a member of the Programming Languages and Verification group (<a href="https://plv.colorado.edu">CUPLV</a>), advised by Professor <a href="http://cs.colorado.edu/~bec">Evan Chang</a>. Previously, I was a student at <a href="http://www.williams.edu">Williams College</a>, in Williamstown, MA, where I graduated in June 2015 with a BA in Computer Science and Mathematics.</p>
+	<p><span style="color:#cc3d21">this website is under construction</span>: I've recently finished my PhD and am working on getting everything up-to-date.</p>
+	<p>
+	I am a software engineer and computer scientist based in London, UK. I'm currently working on static analysis tools at <a href="https://fbinfer.com/">Meta</a>.</p>
+        <p>I earned a PhD in Computer Science from the University of Colorado Boulder in 2022, where I was advised by Professor <a href="http://cs.colorado.edu/~bec">Evan Chang</a> as a member of the <a href="https://plv.colorado.edu">CUPLV</a> group.
+	  Before that, I graduated from <a href="http://www.williams.edu">Williams College</a> in 2015 with a BA in Mathematics and Computer Science.</p>
       </div>
 
       <div class="row" id="research">
         <h3 class="mb0">Research Interests</h3>
         <hr class="mt0">
-        <p>I am interested in building <b>static analysis</b> tools and formalisms that are able to handle the complexities of modern software development. Currently, I am working on incremental and demand-driven <b>abstract interpretation</b>.</p>
+        <p>I am interested in building <b>static analysis</b> tools and formalisms that are able to handle the complexities of modern software development. My dissertation focused on <b>incremental</b> and demand-driven <b>abstract interpretation</b>.</p>
 
 	<p>I've worked in the past on a range of program analysis topics in both academia and industry, including static analysis of dynamic languages, refinement type systems, type inference, and bounded symbolic execution.</p>
       </div>
@@ -80,6 +79,26 @@ function toggle(elt_id, force_visible) {
 
   <div class="row" id="news" style="display:none">
     <div class="row m0"></div>
+
+      <div class="row mt0 mb0 ph1">
+      <div class="row" style="margin-bottom: -2em">
+        <div class="col">
+          <h4><b style="color:#49c484">Dissertation Defense</b></h4>
+        </div>
+
+        <div class="col" style="text-align:right">
+          <h5><i>London, UK / Boulder, CO, March 2022</i></h5>
+        </div>
+      </div>
+      <div class="row ml1 ph2">
+        <div class="col newsitem">
+	  My thesis <i>Demanded Abstract Interpretation</i> formalizes incremental and demand-driven variants of some abstract interpretation problems, showing how we can improve responsiveness and interactivity without sacrificing precision or correctness guarantees.
+        </div>
+	<div class="col" style="text-align:right">
+	  <a class="p1 btn" href="dissertation.pdf">dissertation</a> <a class="p1 btn" href="dissertation-slides.odp">slides</a>
+        </div>
+      </div>
+    </div>
 
     <div class="row mt0 mb0 ph1">
       <div class="row" style="margin-bottom: -2em">
